# MomentsRetrieval

./: CMakeLists.txt
src/: CMakeLists.txt  DataProcessing.cpp  DataProcessing.hpp  Dependencies.cmake  LanguageProcessing.cpp  LanguageProcessing.hpp  Utils.hpp  VisualProcessing.cpp  VisualProcessing.hpp  VisualProcessing.hpp.bak  test.cpp  test.cpp.bak  windows.cmake  windows.cmake.bak
src/Common/: CMakeLists.txt  DataProcessing.hpp  DateType.hpp  Inference.cpp  Inference.hpp  VideoPreprocess.hpp
src/UI/: CMakeLists.txt  UI.cpp  UI.hpp
src/caffeinc/: CMakeLists.txt  caffeinc.hpp
src/didemo/: CMakeLists.txt  LanguageProcessing.hpp  VisualProcessing.hpp  test.cpp
src/seedark/: CMakeLists.txt  Preprocess.hpp  test.cpp  windows.cmake
src/videosearch/: CMakeLists.txt  VideoSearch.hpp  test.cpp  windows.cmake
